--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,9 @@
-port: 8000
-
-max_workers: 10
-channel_buffer_size: 100
+server:
+  port: 8000
+manager:
+  max_workers: 10
+  channel_buffer_size: 100
+data_base:
+  db_name: "iosifdb"
+  user: "iosif"
+  password: "iosif"
