--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ server:
 manager:
   maxWorkers: 10
   channelBufferSize: 100
-dataBase:
-  dbBame: "iosifdb"
+database:
+  dbName: "iosifdb"
   user: "iosif"
   password: "iosif"
