--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,9 +1,5 @@
 name: IOSIF tests itself
-on:
-  push:
-    branches:
-      - master
-      - dev
+on: [push]
 jobs:
   run_unit_tests:
     steps:
