--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,12 +1,12 @@
 name: IOSIF tests itself
 on: [push]
 jobs:
-  run_unit_tests:
+  test:
     strategy:
       matrix:
         go-version: [1.12.x, 1.13.x]
         platform: [ubuntu-latest, macos-latest, windows-latest]
-      runs-on: ${{ matrix.platform }}
+    runs-on: ${{ matrix.platform }}
     steps:
       - name: run tetsts
         run: echo test
