--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,8 +5,8 @@ jobs:
     strategy:
       matrix:
         go-version: [1.12.x, 1.13.x]
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: ubuntu-latest
     runs-on: ${{ matrix.platform }}
     steps:
       - name: run tetsts
-        run: echo test
+        run: ls
