--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,5 +12,5 @@ jobs:
       - name: run tetsts
         run: |
             ls
-            cd devops
+            cd ../IOSIF/devops
             ls
