--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,16 +1,21 @@
 name: IOSIF tests itself
 on: [push]
 jobs:
-  test:
+
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
+
       - name: Set up Go 1.13
         uses: actions/setup-go@v1
         with:
           go-version: 1.13
         id: go
-      - name: Clone repo
-        uses: ations/checkout@v2
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+
       - name: run tetsts
         run: |
             ls
