--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,13 +8,13 @@ jobs:
     steps:
 
       - name: Set up Go 1.13
-        uses: workflow/setup-go@v1
+        uses: actions/setup-go@v1
         with:
           go-version: 1.13
         id: go
 
-      - name: Check out code into the Go module directory
-        uses: workflow/checkout@v2
+#      - name: Check out code into the Go module directory
+#        uses: actions/checkout@v2
 
       - name: run tetsts
         run: |
