--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,6 +6,8 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
 
       - name: Set up Go 1.13
         uses: actions/setup-go@v1
@@ -13,11 +15,9 @@ jobs:
           go-version: 1.13
         id: go
 
-#      - name: Check out code into the Go module directory
-#        uses: actions/checkout@v2
 
-      - name: run tetsts
-        run: |
-            ls
-            cd ../IOSIF/devops
-            ls
+#      - name: run tetsts
+#        run: |
+#            ls
+#            cd ../IOSIF/devops
+#            ls
