--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,5 +18,5 @@ jobs:
       - name: run tetsts
         run: |
             go test ./message_broker -cover -v
-            go test ./core -cover
+            go test ./core -cover -v
 
